--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "supermall1",
+  "name": "supermall",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,7 +10,9 @@
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "axios": "^0.18.0",
+    "better-scroll": "^1.13.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.5.0",
