--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@better-scroll/observe-dom": "^2.0.6",
+    "axios": "^0.18.0",
+    "better-scroll": "^1.13.2",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
-    "vuex": "^3.4.0",
-    "axios": "^0.18.0",
-    "better-scroll": "^1.13.2"
+    "vuex": "^3.4.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.5.0",
