--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "axios": "^0.18.0",
     "better-scroll": "^1.13.2",
     "core-js": "^3.6.5",
+    "lazy-load": "0.0.2",
     "vue": "^2.6.11",
+    "vue-lazyload": "^1.3.3",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
